# scikit-autoeval

./: .buildinfo  .buildinfo.bak  .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE  README.rst  base.html  coverage.xml  evaluators.html  examples.html  genindex.html  index.html  metrics.html  modules.html  objects.inv  py-modindex.html  pylint_report.txt  pyproject.toml  search.html  searchindex.js  utils.html
.github/workflows/: quality.yml
_modules/: index.html
_modules/evaluators/: agreement.html  confidence.html  regression.html  regression_noise.html  shap.html
_modules/examples/: agreement_example.html  confidence_example.html  regression_example.html  regression_noise_example.html  shap_example.html
_modules/metrics/: comparison.html  scorers.html
_modules/skeval/: base.html  utils.html
_modules/skeval/evaluators/: agreement.html  confidence.html  regression.html  regression_noise.html  shap.html
_modules/skeval/examples/: agreement_example.html  confidence_example.html  regression_example.html  regression_noise_example.html  shap_example.html
_modules/skeval/metrics/: comparison.html  scorers.html
_modules/sklearn/utils/: _metadata_requests.html
_sources/: base.rst.txt  evaluators.rst.txt  examples.rst.txt  index.rst.txt  metrics.rst.txt  modules.rst.txt  utils.rst.txt
_sources/evaluators/: agreement.rst.txt  confidence.rst.txt  index.rst.txt  regression.rst.txt  regression_noise.rst.txt  shap.rst.txt
_static/: documentation_options.js
autoeval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: base.rst  conf.py  evaluators.rst  examples.rst  index.rst  metrics.rst  modules.rst  utils.rst
docs/evaluators/: agreement.rst  confidence.rst  index.rst  regression.rst  regression_noise.rst  shap.rst
evaluators/: agreement.html  confidence.html  index.html  regression.html  regression_noise.html  shap.html
scikit_autoeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skeval/: base.py  utils.py
skeval/console-tests/: score_error_test.py
skeval/console_tests/: score_error_test.py
skeval/datasets/: SOP-preprocessado.csv  df_bp_preprossed.csv  df_sirio_preprossed.csv  geriatria-controle-alzheimerLabel.csv  neurologia-controle-alzheimerLabel.csv  school-dropout-2008_preprossed.csv  school-dropout-2014_preprossed.csv
skeval/evaluators/: __init__.py  agreement.py  confidence.py  regression.py  regression_noise.py  shap.py
skeval/evaluators/tests/: test_agreement.py  test_confidence.py  test_regression.py  test_regression_noise.py  test_shap.py
skeval/examples/: agreement_example.py  confidence_example.py  regression_example.py  regression_noise_example.py  score_error_example.py  shap_example.py
skeval/exemples/: agreement_exemple.py  confidence_exemple.py  regression_exemple.py  regression_noise_exemple.py  shap_exemple.py
skeval/metrics/: comparison.py  scorers.py  teste.py
skeval/metrics/tests/: test_comparison.py  test_scorers.py
skeval/plots/: graphics_exemple.py
skeval/scikit_autoeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skeval/scikit_eval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
skeval/tests/: confidence_threshold_eval_test.py  estimate_test.py  score_error_test.py  test_base.py  test_sklearn_compatibility.py  test_typing.py  test_utils.py
